@@ -1,3 +1,8 @@
+2007-07-02  Brian Warner  <warner@lothar.com>
+
+	* contrib/hg_buildbot.py: patch from Frederic Leroy to make this
+	work better.
+
 2007-06-17  Brian Warner  <warner@lothar.com>
 
 	* buildbot/test/test_config.py (Factories.testAllSteps): make sure
